# fala-parlamentar

./: README.md  pyproject.toml  setup.py
fala_parlamentar/: __init__.py  fala_deputado.py  fala_parlamentar.py  fala_senador.py
